--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SML & Associates</title>
+    <title>SML And Associates</title>
     <meta name="description" content="A brief description of your page for SEO">
     <meta name="keywords" content="keywords, for, SEO, purposes">
     <meta name="author" content="Your Name or Company">
@@ -29,7 +29,7 @@
         <div class="header-inner">
 
             <div class="header-logo-con">
-                <img class="header-logo" src="images/SML ico.png"> <p>SML & Associates</p>
+                <img class="header-logo" src="images/SML ico.png"> <p>SML And Associates</p>
             </div>
             <div class="header-options-con">
 
@@ -766,4 +766,5 @@
 
 
 </html>
+
 
