--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
                                     </a></li>
                                     <li><a href="#about-us" class="nav-menu-item">
                                         <p>ABOUT US</p>
-                                    </a></li>  
+                                    </a></li> 
+                                    <li><a href="#value" class="nav-menu-item">
+                                        <p>OUR VALUE PROPOSITION</p>
+                                    </a></li> 
+                                    <li><a href="#leaders" class="nav-menu-item">
+                                        <p>OUR LEADERSHIP TEAM</p>
+                                    </a></li> 
+                                    <li><a href="#choose-us" class="nav-menu-item">
+                                        <p>WHY CHOOSE US</p>
+                                    </a></li> 
                                    
 
                                 </ul>
@@ -766,5 +775,6 @@
 
 
 </html>
+
 
 
