--- a/index.html
+++ b/index.html
@@ -444,6 +444,19 @@
                 
             </div>
 
+            <div class="leaders-header">
+                <hr>
+                <h2>
+                    Our Approach
+                </h2>
+                <hr>
+
+                <p>
+                    We believe in partnership, clarity, and accountability. Our services are delivered with a focus on long-term value, not short-term transactions. We take the time to understand each client’s business, ensuring our advice is practical, relevant, and aligned with their objectives.
+                </p>
+
+            </div>
+
             <div class="mission-sec" id="value">
             
 
@@ -775,6 +788,7 @@
 
 
 </html>
+
 
 
 
