--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                     Founder & Principal Accountant
                 </p>
                 <p class="leader-name">
-                    Bomkazi Siboyana, BA(SA)
+                    Bomkazi Siboyana, Business Accountant (Sout Africa)
                 </p>
 
                 <p>
@@ -788,6 +788,7 @@
 
 
 </html>
+
 
 
 
