--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 
                     <div class="quick-link">
                         <a href="">
-                            <img class="quick-link-icon"  src="svg-icons/email-svgrepo-com.svg"><p>info@smlaccountants.co.za</p>
+                            <img class="quick-link-icon"  src="svg-icons/email-svgrepo-com.svg"><p>info@smlandassociates.co.za</p>
                         </a>
                     </div>
 
@@ -788,6 +788,7 @@
 
 
 </html>
+
 
 
 
