--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <img class="landing-image" src="images/pic 1.jpeg">                
             <div class="landing-content">
                 <div class="landing-front-con">
-                    <h1>SML & Associates</h1>
+                    <h1>SML And Associates</h1>
                     <p class="landing-slogan">
                         
                     </p>
@@ -806,6 +806,7 @@ Valley, Roodepoort, 1735</p>
 
 
 </html>
+
 
 
 
