--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                         </a>
                     </div>
 
-                     <div class="quick-link">
+                     <div class="quick-link quick-link-address">
                         <a href="">
                             <img class="quick-link-icon"  src="svg-icons/pin-svgrepo-com.svg"><p class="address">Clearwater Office Park, Millennium Blvd, Strubens
 Valley, Roodepoort, 1735</p>
@@ -806,6 +806,7 @@ Valley, Roodepoort, 1735</p>
 
 
 </html>
+
 
 
 
