--- a/index.html
+++ b/index.html
@@ -705,6 +705,12 @@
                         </a>
                     </div>
 
+                    <div class="quick-link">
+                        <a href="#approach">
+                            <img class="quick-link-icon"  src="svg-icons/arrow-right-336-svgrepo-com.svg"><p>OUR APPROACH</p>
+                        </a>
+                    </div>
+
                     
                     <div class="quick-link">
                         <a href="#value">
@@ -806,6 +812,7 @@ Valley, Roodepoort, 1735</p>
 
 
 </html>
+
 
 
 
